2016-06-27  Even Rouault <even.rouault@spatialys.com>

    * Fix mat_inverse() to not use variable length arrays (OGDI #65)

2016-06-27  Even Rouault <even.rouault@spatialys.com>

    * Fix build against proj >= 4.9
    * Grow some buffers in VRF driver (patch by Craig Bruce)
    * Fix compiler warnings raised by GCC 4.4
    * VPF: Fix off-by-one extra write in vpf_colum_name[] in
      read_thematic_index_header(). Reported by clang

2009-05-08  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/feature.c: fix count type to be int32 to avoid
	variable corruption on 64bit systems (#2787502).

2008-05-28  Balint Cristian  <rezso@rdsor.ro>

        * New 3.2.0beta2 release
        * fix path case sensitive problem for vpf driver
        * fix build on GNU/kFreeBSD
        * avoid bashism in makefiles

2007-05-09  Balint Cristian  <cbalint@redhat.com>

        * Prepare for 3.2.0beta2 release.

2007-05-09  Balint Cristian  <cbalint@redhat.com>

From: Even Rouault <even.rouault@mines-paris.org>
Date: Friday 21:14:18

        * fix filename case sensitivy problems (for Unix-like systems).  

        * fix incorrect use of sprintf in vrf_GetMetadata.

        * report wgs84 instead of nad83, not sure whether that is true 
        for all VPF products, but at least it's correct for VMAP products 
        that *must* be WGS84. A better fix would be to read the VPF table 
        that contains this information.

        * fix a few minor memory leaks and memory usage issues.

        * enable XMIN, YMIN, XMAX and YMAX columns to be of type double 
        in EBR and FBR files (for read the VMAP2i 'MIG2i000' product).

        * add .pjt and .tjt as possible extensions for join tables
        (VMAP2i 'MIG2i000' product).
        
        * fix duplicated layers report (VMAP2i 'MIG2i000' product).
        
        * handle 'L' (Latin1) type for text files (GEOCAPI 'MIGxxx' products).
        
        * optionnaly, convert text to UTF-8 when environment variable 