@@ -1,3 +1,7 @@
+2016-06-28  Even Rouault <even.rouault@spatialys.com>
+
+    * Fix memory leak in ADRG driver
+
 2016-06-27  Even Rouault <even.rouault@spatialys.com>
 
     * Fix mat_inverse() to not use variable length arrays (OGDI #65)
